track url working

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,7 +7,7 @@ html
 
   body
     block content
-    script(src='lastfm.api.md5.js')
-    script(src='lastfm.api.cache.js')
-    script(src='lastfm.api.js')
+    script(src='/lastfm.api.md5.js')
+    script(src='/lastfm.api.cache.js')
+    script(src='/lastfm.api.js')
     script(src='/bundle.js')
