artist page progress

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,10 @@
 extends layout
 
 block content
-  .player
+  #blur
+    #background
+  #header
+    input#search(type='text', placeholder='Search for artists, tracks, or albums')
+  #view
+
+  #player
