--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/main.css')
+    link(href='http://fonts.googleapis.com/css?family=Rock+Salt', rel='stylesheet')
     //- link(rel='stylesheet', href='/font-awesome/css/font-awesome.min.css')
 
   body
