fix track screen

--- a/css/main.styl
+++ b/css/main.styl
@@ -27,8 +27,7 @@ a
   color: #00B7FF
 
 #player
-  display: none
-  position: relative
+  position: fixed
   margin-top: -5%
   height: 120%
   width: 100%
@@ -37,10 +36,10 @@ a
   position: fixed
   height: 100%
   width: 100%
-  padding-top: 150px
+  padding-top: 100px
   text-shadow: 0 0 1px rgba(0, 0, 0, 0.5)
   z-index: 20
-  background: linear-gradient(top, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0) 20%)
+  background: linear-gradient(top, rgba(0,0,0,0.8) 0px, rgba(0,0,0,0) 100px)
 
 #blur
   position: fixed
@@ -63,7 +62,7 @@ a
 
 #header
   position: fixed
-  height: 150px
+  height: 100px
   width: 100%
   margin-top: 15px
   z-index: 30
