--- a/views/index.jade
+++ b/views/index.jade
@@ -4,6 +4,12 @@ block content
   #blur
     #background
   #header
-    input#search(type='text', placeholder='Search for artists, tracks, or albums')
+    input#search(type='text', placeholder='Search artists, tracks, or albums')
   #view
   #player
+
+  #controls
+    .play
+    .timeline
+      .progress
+        .time 0:00
