--- a/templates/artist.html
+++ b/templates/artist.html
@@ -1,6 +1,3 @@
-<h1>{{ name }}</h1>
-<p>{{{ bioLong }}}</p>
-
 <div class='albums'>
   <a class='album' href='/album/aristName/albumName'>
     <img src='https://pbs.twimg.com/profile_images/454333621331976193/AX-M-ESC.jpeg'>
@@ -19,3 +16,6 @@
     <span class='sub'>Album Name</span>
   </a>
 </div>
+
+<!-- <h1>{{ name }}</h1>
+<p>{{{ bioLong }}}</p> -->
