--- a/css/main.styl
+++ b/css/main.styl
@@ -36,20 +36,22 @@ body.inactive
   cursor: none
 
 a
-  color: #00B7FF
+  display: block
+  color: #FFF
+  text-decoration: none
 
 #player
   position: fixed
-  margin-top: -10%
-  height: 130%
-  width: 100%
+  height: 100%
+  width: 116%
+  margin-left: -8%
   z-index: 10
 
 #view
   position: fixed
   height: 100%
   width: 100%
-  padding-top: 100px
+  padding: 100px 15px 15px 15px
   text-shadow: 0 0 1px rgba(0, 0, 0, 0.5)
   z-index: 20
   background: linear-gradient(top, rgba(0,0,0,0.7) 0px, rgba(0,0,0,0) 100px)
@@ -153,4 +155,59 @@ h1
     background-color: rgba(255, 164, 114, 0.5)
   .progress
     width: 0%
-    background-color: #ff5a00
+    background-color: rgb(255, 90, 0)
+
+#results
+  .result
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7)
+    // border: solid red 1px
+
+  .tracks
+    width: 33%
+
+    .result
+      border-radius: 7px
+      background-color: rgba(0, 0, 0, 0.8)
+      height: 70px
+      margin-bottom: 15px
+
+      .left
+        display: inline-block
+        border-top-left-radius: 7px
+        border-bottom-left-radius: 7px
+        background-color: rgb(255, 90, 0)
+        float: left
+        height: 70px
+        width: 70px
+
+      .playBtn
+        height: 56px
+        width: 56px
+        border-radius: 28px
+        border: 2px solid #FFF
+        margin: 7px
+
+        .arrow
+          width: 0
+          height: 0
+          border-top: 15px solid transparent
+          border-bottom: 15px solid transparent
+
+          border-left: 26px solid #FFF
+          margin: 11px 0 0 16px
+
+      .right
+        display: inline-block
+        padding: 10px 15px
+        overflow: hidden
+
+      .name, .artist
+        line-height: 1.5em
+      .name
+        ellipsis()
+        width: 100%
+        font-size: 21px
+
+      .artist
+        color: #AAA
+        font-size: 13px
