--- a/templates/results.html
+++ b/templates/results.html
@@ -1,5 +1,6 @@
 <div id="results">
   <div class="tracks">
+    <h2>Tracks</h2>
     {{#tracks}}
       <a class="result clearfix" href="{{ url }}">
         <div class="left">
@@ -13,5 +14,26 @@
         </div>
       </a>
     {{/tracks}}
+  </div>
+  <div class="artists">
+    <h2>Artists</h2>
+    {{#artists}}
+      <a class="result" href="{{ url }}" style="background-image: url({{ image }})">
+        <div class="gradient">
+          <div class="name">{{ name }}</div>
+        </div>
+      </a>
+    {{/artists}}
+  </div>
+  <div class="albums">
+    <h2>Albums</h2>
+    {{#albums}}
+      <a class="result clearfix" href="{{ url }}" style="background-image: url({{ image }})">
+        <div class="gradient">
+          <div class="name">{{ name }}</div>
+          <div class="artist">{{ artist }}</div>
+        </div>
+      </a>
+    {{/albums}}
   </div>
 </div>
