--- a/css/main.styl
+++ b/css/main.styl
@@ -27,10 +27,13 @@ user-select()
 html, body
   background: black
   color: white
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
+  font-family: 'Oswald', sans-serif
   height: 100%
   overflow: hidden
   width: 100%
+
+input
+  font-family: 'Oswald', sans-serif
 
 body.inactive
   cursor: none
@@ -110,9 +113,10 @@ h1, h2, h3, h4
   line-height: 1.5em
 h1
   font-family: 'Rock Salt', cursive
-  font-size: 80px
+  font-size: 60px
 h2
-  font-size: 40px
+  font-family: 'Oswald', sans-serif
+  font-size: 36px
 
 #controls
   position: fixed
@@ -152,9 +156,6 @@ h2
 .result
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7)
 
-  &:hover
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7)
-
 .tracks, .artists, .albums
   float: left
   padding: 0 20px
@@ -166,15 +167,14 @@ h2
   background-color: rgba(0, 0, 0, 0.7)
   border-radius: 5px
   height: 70px
-  .left
-    display: inline-block
-    border-top-left-radius: 5px
-    border-bottom-left-radius: 5px
-    background-color: rgb(123, 0, 153)
-    float: left
-    height: 70px
-    width: 70px
+  &:hover
+    background-color: rgba(44, 94, 177, 0.7)
+    .playBtn
+      background-color: rgb(55, 117, 221)
+
   .playBtn
+    float: left
+    background-color: rgb(123, 0, 153)
     height: 56px
     width: 56px
     border-radius: 28px
@@ -188,8 +188,8 @@ h2
       border-left: 26px solid #FFF
       margin: 10px 0 0 16px
   .right
-    display: inline-block
-    padding: 10px 15px
+    float: left
+    padding: 10px 5px
     overflow: hidden
   .name, .artist
     line-height: 1.5em
@@ -220,6 +220,7 @@ h2
 
 
 .albums .result
+  position: relative
   width: 180px
   height: 180px
   border-radius: 5px
@@ -236,10 +237,18 @@ h2
     background-size: cover
 
   .name
-    font-size: 16px
+    font-size: 17px
     line-height: 1.5em
 
   .artist
-    color: #CCC
-    font-size: 12px
+    position: absolute
+    bottom: 10px
+    left: 0
+    // text-align: center
+    width: 180px
+    font-size: 14px
 
+.artists, .albums
+  .result:hover
+    .gradient
+      background-image: linear-gradient(top, rgba(44, 94, 177, 0.7) 0%, rgba(44, 94, 177, 0.5) 100%)
