--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html
     title= title
     link(rel='stylesheet', href='/main.css')
     link(href='http://fonts.googleapis.com/css?family=Rock+Salt', rel='stylesheet')
+    link(href='http://fonts.googleapis.com/css?family=Oswald', rel='stylesheet')
     //- link(rel='stylesheet', href='/font-awesome/css/font-awesome.min.css')
 
   body
