add exit button

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,9 @@ block content
   #blur
     #background
   #header
-    input#search(type='text', placeholder='Search artists, tracks, or albums')
+    #search
+      input(type='text', placeholder='Search artists, tracks, or albums')
+      .exitBtn ✕
   #view
   #player
 
