--- a/css/main.styl
+++ b/css/main.styl
@@ -86,20 +86,47 @@ a
   z-index: 100
 
 #search
-  display: block
+  position: relative
   height: 50px
   width: 400px
-  background: linear-gradient(top, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2))
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.3)
-  border: 2px solid #FFF
-  border-radius: 25px
-  color: #FFF
-  font-size: 20px
-  outline: 0
   margin: 0 auto
-  padding-left: 20px
-  padding-right: 20px
-  text-shadow: 0 0 rgba(0, 0, 0, 0.7)
+
+  &.hasText .exitBtn
+    display: block
+
+  .exitBtn
+    display: none
+    border-top-right-radius: 25px
+    border-bottom-right-radius: 25px
+    position: absolute
+    cursor: pointer
+    top: 0
+    right: 0
+    text-shadow: #000 0 1px 3px
+    color: #fff
+    font-size: 26px
+    padding: 11px 15px 12px 5px
+    opacity: 0.7
+
+    &:hover
+      opacity: 1
+
+
+
+  input
+    display: block
+    height: 50px
+    width: 400px
+    background: linear-gradient(top, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2))
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.3)
+    border: 2px solid #FFF
+    border-radius: 25px
+    color: #FFF
+    font-size: 20px
+    outline: 0
+    padding-left: 20px
+    padding-right: 20px
+    text-shadow: 0 0 rgba(0, 0, 0, 0.7)
 
 ::-webkit-input-placeholder
   color: #DDD
@@ -141,7 +168,7 @@ h2
     left: 0
     opacity: 1
     font-size: 18px
-    margin: 7px 12px
+    margin: 9px 15px
     transition: opacity 0.15s linear
     .inactive &
       opacity: 0
@@ -208,6 +235,7 @@ h2
   text-align: center
   border-radius: 10px
   background-size: cover
+  background-position: 50% 50%
 
   .gradient
     background-image: linear-gradient(top, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0) 30%)
